syntax = "proto3";

package sbot.proto.model;

option csharp_namespace = "SBot.Proto.Model";
option go_package = "github.com/sbot/proto/model";
option java_multiple_files = true;
option java_outer_classname = "Node";
option java_package = "com.gbw3bao.sbot.proto.model";
option php_namespace = "SBot\\Proto\\Model";

message CreateNodeRequest {

  //the userId
  string userId = 1;

  //the attack task id
  string taskId = 2;

  //the parent cbot nodeId
  string pnodeId = 3;

  //the parent cbot attack type
  string attackType = 4;

  //the cbot version
  string version = 5;

  //the local ip address that been attacked node
  string localIP = 6;

  // the out ip address that been attacked node
  string outIP = 7;

  // the mac address that been attacked node
  string mac = 8;

  //the os that been attacked node
  string os = 9;

  //the system arch
  string arch = 10;

  //the current user
  string user = 11;

  //the host name that been attacked node
  string hostName = 12;

  //the create node time
  uint64 time = 13;

  //the last ping node time
  uint64 lastTime = 14;

}

message Node {

  // 0 ---create node ok,-1---create node failed
  int32 status = 1;

  // indentify a node that been attacked
  string id = 2;

}

message PingRequest {

  string taskId = 1;

  string nodeId = 2;

  //the time that cbot sends ,time unit is ms
  uint64 time = 3;

}

message PingReply {

  // 0 ---ping server ok,-1---ping server failed
  int32 status = 1;

  //the description of status
  string message =2 ;

  //the time that sbot sends reply,time unit is ms
  uint64 time = 3;

}

message AttackProcessRequest {

  string userId = 1;

  string taskId = 2;

  string nodeId = 3;

  uint64 time = 4;

  string targetIP = 5;

  string targetHost = 6;

  int32  targetPort = 7;

  string proto = 8;

  string app = 9;

  string os = 10;

  string attackName = 11;

  string attackType = 12;

  int32 status = 13;

  string payload = 14;

  string result = 15;

  string details = 16;

}

message AttackProcessReply {

  int32 status = 1;


  string message =2 ;
}

